--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,144 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;800;900&display=swap');
 
 body {
-    margin-left: 215px;
-    background: rgba(0, 0, 0, 0.9);
+    padding: 0;
+    margin: 0;
     font-family: 'Montserrat';
+    color: #FFF;
+    font-size: 18px;
+    background: rgba(0, 0, 0, 0.9);
+
+}
+
+h1, h2, h3, h4, h5, h6 {
+    padding: 0;
+    margin: 0;
+    text-transform: uppercase;
+}
+
+ul, li {
+    display: block;
+    padding: 0;
+    margin: 0;
+}   
+
+.container {
+    width: 1170px;
+    margin: 0 auto;
+}
+
+header {
+    margin-top: 63px;
+}
+
+header .container {
+    text-transform: uppercase;
+}
+
+.myname {
+    font-weight: 800;
+    margin-right: 159px;
+}
+
+.myname span {
+    color: rgba(238, 26, 26, 0.7);
+}
+
+.work {
+    margin-right: 180px;
+    font-weight: 500;
+}
+
+header a {
+    color:#FFF;
+}
+
+.menu {
+    display: flex;
+    margin-left: auto;
+}
+
+.menu li:not(:last-child){
+    margin-right: 21px;
+}
+
+.menu li a {
+    text-decoration: none;
+    font-size: 13px;
+    font-weight: 500;
+}
+
+.nav {
+    display: flex;
+    align-items: center;
+    margin-top: 63px;
+    padding-top: 24px;
+
+}
+
+.nav img{
+    margin-right: 11px;
+}
+
+#rectangle{
+    position: absolute;
+    padding: 0;
+    width: 100%;
+    height: 141px;
+    background: rgba(255, 255, 255, 0.06);
+}
+
+.fline {
+    position: absolute;
+    margin-top: 84px;
+    width: 520px;
+    border: 7px solid rgba(134, 134, 134, 0.7);
+}
+
+.sline {
+    position: absolute;
+    margin-top: 100px;
+    width: 260px;
+    border: 7px solid rgba(134, 134, 134, 0.4);
+}
+
+.tline {
+    position: absolute;
+    margin-top: 116px;
+    width: 130px;
+    border: 7px solid rgba(134, 134, 134, 0.2);
+}
+
+.photo-left {
+    margin-top: 144px;
+	position	: relative;
+}
+
+.fun {
+	position	: absolute;
+	top		: 146px;
+	left		: 89px;
+	width		: 100%;
+    font-size: 60px;
+    font-weight: 900;
+}
+
+.photo-right {
+    margin-top: 144px;
+	position	: relative;
+    margin-left: 170px;
+
+}
+
+.fun {
+	position	: absolute;
+	top		: 146px;
+	left		: 89px;
+	width		: 100%;
+    font-size: 60px;
+    font-weight: 900;
+}
+
+.photo {
+    display: flex;
 }
